--- a/templates/index.html
+++ b/templates/index.html
@@ -392,8 +392,14 @@
       }
 
       .menu_check_list {
-        height: 15px;
+        height: 12px;
         width: 10%;
+        padding-top: 4px;
+      }
+
+      .menu_check_list_label {
+        width: 80%;
+        display: inline;
       }
 
       .main_tab_links {
@@ -497,37 +503,37 @@
                           <li>
                               <input class="missing_data_limit menu_check_list" type="checkbox" checked value="0"
                               onclick="update_check_list(event, this)">
-                              <div style="width: 80%;">0%</div>
+                              <div class="menu_check_list_label">0%</div>
                           </li>
                           <li>
                               <input class="missing_data_limit menu_check_list" type="checkbox" value="0.01"
                               onclick="update_check_list(event, this)">
-                              <div style="width: 80%;">1%</div>
+                              <div class="menu_check_list_label">1%</div>
                           </li>
                           <li>
                               <input class="missing_data_limit menu_check_list" type="checkbox" value="0.02"
                               onclick="update_check_list(event, this)">
-                              <div style="width: 80%;">2%</div>
+                              <div class="menu_check_list_label">2%</div>
                           </li>
                           <li>
                               <input class="missing_data_limit menu_check_list" type="checkbox" value="0.05"
                               onclick="update_check_list(event, this)">
-                              <div style="width: 80%;">5%</div>
+                              <div class="menu_check_list_label">5%</div>
                           </li>
                           <li>
                               <input class="missing_data_limit menu_check_list" type="checkbox" value="0.1"
                               onclick="update_check_list(event, this)">
-                              <div style="width: 80%;">10%</div>
+                              <div class="menu_check_list_label">10%</div>
                           </li>
                           <li>
                               <input class="missing_data_limit menu_check_list" type="checkbox" value="0.2"
                               onclick="update_check_list(event, this)">
-                              <div style="width: 80%;">20%</div>
+                              <div class="menu_check_list_label">20%</div>
                           </li>
                           <li>
                               <input class="missing_data_limit menu_check_list" type="checkbox" value="0.3"
                               onclick="update_check_list(event, this)">
-                              <div style="width: 80%;">30%</div>
+                              <div class="menu_check_list_label">30%</div>
                           </li>
                       </ul>
                   </li>
@@ -536,37 +542,37 @@
                           <li>
                               <input class="down_sample_option menu_check_list" type="checkbox" checked value="1"
                               onclick="update_check_list(event, this)">
-                              <div style="width: 80%;">100% (full data)</div>
+                              <div class="menu_check_list_label">100% (full data)</div>
                           </li>
                           <li>
                               <input class="down_sample_option menu_check_list" type="checkbox" value="0.5"
                               onclick="update_check_list(event, this)">
-                              <div style="width: 80%;">50%</div>
+                              <div class="menu_check_list_label">50%</div>
                           </li>
                           <li>
                               <input class="down_sample_option menu_check_list" type="checkbox" value="0.2"
                               onclick="update_check_list(event, this)">
-                              <div style="width: 80%;">20%</div>
+                              <div class="menu_check_list_label">20%</div>
                           </li>
                           <li>
                               <input class="down_sample_option menu_check_list" type="checkbox" value="0.1"
                               onclick="update_check_list(event, this)">
-                              <div style="width: 80%;">10%</div>
+                              <div class="menu_check_list_label">10%</div>
                           </li>
                           <li>
                               <input class="down_sample_option menu_check_list" type="checkbox" value="0.05"
                               onclick="update_check_list(event, this)">
-                              <div style="width: 80%;">5%</div>
+                              <div class="menu_check_list_label">5%</div>
                           </li>
                           <li>
                               <input class="down_sample_option menu_check_list" type="checkbox" value="0.05"
                               onclick="update_check_list(event, this)">
-                              <div style="width: 80%;">2%</div>
+                              <div class="menu_check_list_label">2%</div>
                           </li>
                           <li>
                               <input class="down_sample_option menu_check_list" type="checkbox" value="0.01"
                               onclick="update_check_list(event, this)">
-                              <div style="width: 80%;">1%</div>
+                              <div class="menu_check_list_label">1%</div>
                           </li>
                       </ul>
                   </li>
