--- a/templates/index.html
+++ b/templates/index.html
@@ -640,10 +640,10 @@
         </div>
         <button id="default_panel" class="main_tab_links"
                 onclick="displayPanels(event, 'load_panel')" style="width: 100%; height: 50px">Load</button>
-        <button id="tariff_panel_button" class="main_tab_links"
-                onclick="displayPanels(event, 'tariff_selection_panel')" style="width: 100%; height: 50px">Tariffs</button>
         <button class="main_tab_links" style="width: 100%; height: 50px"
                 onclick="displayPanels(event, 'wholesale_energy_costs_selection_panel')">Wholesale prices</button>
+        <button id="tariff_panel_button" class="main_tab_links"
+                onclick="displayPanels(event, 'tariff_selection_panel')" style="width: 100%; height: 50px">Tariffs</button>
         <button id="results_panel_button" class="main_tab_links"
                 onclick="displayPanels(event, 'results_panel')" style="width: 100%; height: 50px">Results</button>
     </div>
@@ -1042,7 +1042,7 @@
             <div style="padding: 1%; width: 100%; height: 95%; border-width: 2px; box-sizing: border-box;
                         border-style: solid; border-color: #EEEEEE;">
                 <div class="row" style="height: 55%">
-                    <div class="col" style="width: 35%">
+                    <div class="col" style="width: 50%">
                         <div class="row" style="height: 10%">
                             <h4 style="margin: 0;">Historical wholesale prices</h4>
                             <hr style="width: 80%; float: left;">
@@ -1061,13 +1061,22 @@
                                 </select>
                             </div>
                         </div>
+                        <div class="row" style="height: 12%">
+                            <h4 style="margin: 0;">Actions</h4>
+                            <hr style="width: 80%; float: left;">
+                        </div>
+                        <div class="row" style="height: 40%">
+                            <button style="width: 80%; text-align: left; height: 3.25vh;"
+                                    onclick="get_default_case_name()">Create case</button>
+                        </div>
                     </div>
                 </div>
                 <div style="height: 2%"><hr></div>
                 <div id="price_inspection" style="height: 40%">
                     <div style="height: 10%; overflow: hidden;">
                         <select  id="select_price_graph" style="float: right; width: 30%;">
-                            <option value="Annual Profile"> Annual Profile</option>
+                            <option value="Annual Profile">Annual Profile</option>
+                            <option value="Price Duration Curve">Price Duration Curve</option>
                         </select>
                         <div class="label_line" style="float: right;">Show:&nbsp</div>
                     </div>
