--- a/templates/tariff_selectors.html
+++ b/templates/tariff_selectors.html
@@ -63,11 +63,11 @@
     </div>
     <div class="row" style="height: 40%">
         <button style="width: 80%; text-align: left; height: 3.25vh;"
-                onclick="get_default_case_name(event, this)">Apply tariff to load and create case</button>
+                onclick="get_default_case_name()">Apply tariff to load and create case</button>
         <button style="width: 80%; text-align: left; height: 3.25vh;"
-                onclick="delete_tariff(event, this)">Delete from active database</button>
+                onclick="delete_tariff()">Delete from active database</button>
         <button class="save_mod_button" style="width: 80%; text-align: left; height: 3.25vh;"
-                    onclick="get_tariff_then_save(event, this)">Save new version of tariff</button>
+                    onclick="get_tariff_then_save()">Save new version of tariff</button>
     </div>
 </div>
 
