wholesale price case info

--- a/static/css_trick_dropdown_example/dropdown_menu.css
+++ b/static/css_trick_dropdown_example/dropdown_menu.css
@@ -1,4 +1,4 @@
-* 									{ margin: 0; padding: 0; }
+ul 									{ margin: 0; padding: 0; }
 body								{ font: 14px Helvetica, Sans-Serif; }
 #page-wrap							{ width: 800px; margin: 25px auto; }
 a									{ text-decoration: none; }
