fixed wholesale info bug and tariff save bug

--- a/templates/tariff_selectors.html
+++ b/templates/tariff_selectors.html
@@ -67,7 +67,7 @@
         <button style="width: 80%; text-align: left; height: 3.25vh;"
                 onclick="delete_tariff()">Delete from active database</button>
         <button class="save_mod_button" style="width: 80%; text-align: left; height: 3.25vh;"
-                    onclick="get_tariff_then_save()">Save new version of tariff</button>
+                    onclick="get_tariff_then_save(this)">Save new version of tariff</button>
     </div>
 </div>
 
