case scroll on overflow

--- a/templates/index.html
+++ b/templates/index.html
@@ -858,8 +858,9 @@
             </div>
 
             <div class="case_area">
-                <div id="case_list" class="case_area_top">
-                    <h3 id="start_case_list" style="padding: 5%">List of cases:</h3>
+                <div class="case_area_top" >
+                    <h3 id="start_case_list" style="padding: 5%; height: 5%;">List of cases:</h3>
+                    <div id="case_list" style="overflow: auto; height: 75%;"></div>
                 </div>
                 <div class="case_area_bottom">
                     <div id="case_tabs" class="tab_button_area">
